adding theme toggler to component list

--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -13,6 +13,7 @@ body:
       description: Select the component this feature is for
       options:
         - menu-toggler
+        - theme-toggler
   - type: textarea
     id: description
     attributes:
