--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -13,6 +13,7 @@ body:
       description: Select the component your issue is about
       options:
         - menu-toggler
+        - theme-toggler
   - type: textarea
     id: description
     attributes:
