toggler component added to forms

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -14,6 +14,7 @@ body:
       options:
         - menu-toggler
         - theme-toggler
+        - toggler
   - type: textarea
     id: description
     attributes:
