--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -14,6 +14,7 @@ body:
       options:
         - menu-toggler
         - theme-toggler
+        - toggler
   - type: textarea
     id: description
     attributes:
