adding mini-slider cover and item at components list for bugs and feature req

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -15,6 +15,7 @@ body:
         - menu-toggler
         - theme-toggler
         - toggler
+        - mini-slider
   - type: textarea
     id: description
     attributes:
