--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -15,6 +15,7 @@ body:
         - menu-toggler
         - theme-toggler
         - toggler
+        - mini-slider
   - type: textarea
     id: description
     attributes:
