adding full-carousel cover

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -16,6 +16,7 @@ body:
         - theme-toggler
         - toggler
         - mini-slider
+        - full-carousel
   - type: textarea
     id: description
     attributes:
